// SPDX-License-Identifier: AGPL-3.0-only

syntax = "proto3";

package compactorschedulerpb;

import "gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;

message JobKey {
  string id = 1;
  int64 epoch = 2;
}

enum JobType {
  COMPACTION = 0;
  PLANNING = 1;
}

message JobSpec {
  string tenant = 1;
  CompactionJob job = 2;
  JobType job_type = 3;
}

message CompactionJob {
  repeated bytes blockIds = 2;
  bool split = 3;
}

service CompactorScheduler {
  rpc LeaseJob(LeaseJobRequest) returns (LeaseJobResponse);
  rpc PlannedJobs(PlannedJobsRequest) returns (PlannedJobsResponse);
  rpc UpdatePlanJob(UpdatePlanJobRequest) returns (UpdateJobResponse);
  rpc UpdateCompactionJob(UpdateCompactionJobRequest) returns (UpdateJobResponse);
}

message LeaseJobRequest {
  string worker_id = 1;
}

message LeaseJobResponse {
  JobKey key = 1;
  JobSpec spec = 2;
}

message PlannedCompactionJob {
  string id = 1;
  CompactionJob job = 2;
}

message PlannedJobsRequest {
  JobKey key = 1;
  repeated PlannedCompactionJob jobs = 2;
}

message PlannedJobsResponse {}

enum UpdateType {
  IN_PROGRESS = 0;
  COMPLETE = 1;
  REASSIGN = 2;
  ABANDON = 3;
}

message UpdatePlanJobRequest {
  JobKey key = 1;
  UpdateType update = 3;
}

message UpdateCompactionJobRequest {
  JobKey key = 1;
  string tenant = 2;
  UpdateType update = 3;
}

message UpdateJobResponse {}

message StoredJobInfo {
  int64 creationTime = 1;
  int64 leaseCreationTime = 2;
  int32 numLeases = 3;
  int64 epoch = 4;
}

message StoredCompactionJob {
  StoredJobInfo info = 1;
  CompactionJob job = 2;
}
